[gd_scene load_steps=3 format=3 uid="uid://dtixduom6l63m"]

[ext_resource type="FontFile" uid="uid://d1vfx271ou42p" path="res://assets/fonts/roboto/roboto-bold.ttf" id="1_3nrrd"]
[ext_resource type="Script" path="res://scripts/profile/profile.gd" id="1_hk067"]

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -251.0
offset_right = 284.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -217.0
offset_right = 249.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("1_hk067")

[node name="Username" type="Label" parent="Panel/Container"]
layout_mode = 2
offset_right = 498.0
offset_bottom = 32.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("1_3nrrd")
theme_override_font_sizes/font_size = 24
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Elo" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2
offset_top = 52.0
offset_right = 498.0
offset_bottom = 77.0

[node name="Label" type="Label" parent="Panel/Container/Elo"]
layout_mode = 2
offset_right = 30.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Elo:"
vertical_alignment = 1

[node name="Val" type="Label" parent="Panel/Container/Elo"]
layout_mode = 2
offset_left = 34.0
offset_right = 75.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "1200"
vertical_alignment = 1

[node name="Wins" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2
offset_top = 97.0
offset_right = 498.0
offset_bottom = 122.0

[node name="Label" type="Label" parent="Panel/Container/Wins"]
layout_mode = 2
offset_right = 49.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Wins: "
vertical_alignment = 1

[node name="Val" type="Label" parent="Panel/Container/Wins"]
layout_mode = 2
offset_left = 53.0
offset_right = 64.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "0"
vertical_alignment = 1

[node name="Draws" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2
offset_top = 142.0
offset_right = 498.0
offset_bottom = 167.0

[node name="Label" type="Label" parent="Panel/Container/Draws"]
layout_mode = 2
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Draws: "
vertical_alignment = 1

[node name="Val" type="Label" parent="Panel/Container/Draws"]
layout_mode = 2
offset_left = 63.0
offset_right = 74.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "0"
vertical_alignment = 1

[node name="Losses" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2
offset_top = 187.0
offset_right = 498.0
offset_bottom = 212.0

[node name="Label" type="Label" parent="Panel/Container/Losses"]
layout_mode = 2
offset_right = 67.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Losses: "
vertical_alignment = 1

[node name="Val" type="Label" parent="Panel/Container/Losses"]
layout_mode = 2
offset_left = 71.0
offset_right = 82.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "0"
vertical_alignment = 1

[node name="EmailVerified" type="HBoxContainer" parent="Panel/Container"]
visible = false
layout_mode = 2
offset_top = 232.0
offset_right = 498.0
offset_bottom = 257.0

[node name="Label" type="Label" parent="Panel/Container/EmailVerified"]
layout_mode = 2
offset_right = 117.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Email verified: "
vertical_alignment = 1

[node name="Val" type="CheckBox" parent="Panel/Container/EmailVerified"]
layout_mode = 2
offset_left = 121.0
offset_right = 145.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
disabled = true
button_pressed = true

[node name="VerifyEmail" type="HBoxContainer" parent="Panel/Container"]
visible = false
layout_mode = 2
offset_top = 232.0
offset_right = 498.0
offset_bottom = 262.0

[node name="Button" type="Button" parent="Panel/Container/VerifyEmail"]
layout_mode = 2
offset_right = 103.0
offset_bottom = 30.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Verify Email"

[node name="ClaimAccount" type="HBoxContainer" parent="Panel/Container"]
visible = false
layout_mode = 2
offset_top = 232.0
offset_right = 498.0
offset_bottom = 262.0

[node name="Button" type="Button" parent="Panel/Container/ClaimAccount"]
layout_mode = 2
offset_right = 126.0
offset_bottom = 30.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Claim Account"

[node name="Separator" type="Control" parent="Panel/Container"]
layout_mode = 2
anchors_preset = 0
offset_top = 232.0
offset_right = 498.0
offset_bottom = 325.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="Panel/Container"]
custom_minimum_size = Vector2i(0, 90)
layout_mode = 2
offset_top = 345.0
offset_right = 498.0
offset_bottom = 435.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 32
text = "Back
"
